logs/Slang/chapter-11/11.4.14.2--reorder_stream.sv.log
name: reorder_stream
description: stream reordering test
should_fail: 0
tags: 11.4.14.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.2--reorder_stream.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.2--reorder_stream.sv:13:6: error: language feature not yet supported
	b = { << byte {a}};
	    ^~~~~~~~~~~~~~
